# maul-team

./: .gitignore  .scrum-config.example.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  SECURITY.md  appcast.xml  pyproject.toml  scrum-start.sh
.claude/: settings.json
.claude/rules/: no-private-project-references.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
agents/: codex-design-reviewer.md  codex-impl-reviewer.md  codex-ut-reviewer.md  developer.md  docs-consistency-reviewer.md  functional-quality-reviewer.md  maintainability-reviewer.md  pbi-designer.md  pbi-implementer.md  pbi-ut-author.md  product-owner.md  requirement-conformance-reviewer.md  requirements-analyst.md  scrum-master.md  security-reviewer.md
dashboard/: app.py
docs/: CLA.md  MIGRATION-pbi-pipeline.md  MIGRATION-scrum-state-tools.md  architecture.md  autonomous-mode.md  data-model.md  macapp-distribution-setup.md  quickstart.md  requirements.md  site-analytics.md
hooks/: completion-gate.sh  dashboard-event.sh  pre-tool-use-no-branch-ops.sh  pre-tool-use-path-guard.sh  pre-tool-use-scrum-state-guard.sh  quality-gate.sh  session-context.sh  status-gate.sh  stop-dispatch.sh  stop-failure.sh
macapp/: .gitignore  CLAUDE.md  LICENSE  Package.resolved  Package.swift  README.md  THIRD-PARTY-NOTICES.md  entitlements.plist  sparkle-public-key.txt
metrics/: downloads.jsonl
rules/: scrum-context.md
scripts/: setup-dev.sh  setup-user.sh  stall-watchdog.sh  statusline.sh
site/: i18n.js  index.html  robots.txt  sitemap.xml  terms.html
(+295 files in other folders)
