[project]
name = "maul-team"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "textual>=0.50",
  "jsonschema>=4.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dashboard"]
